edits actually working

--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,9 +1,10 @@
 <section class="text-center py-5 bg-secondary">
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <% if @workout.image1.attached? %>
+        <% @workout.images.each_with_index do |image, index| %>
+      <% if @workout.image[index].attached? %>
         <div class="carousel-item active">
-          <%= image_tag @workout.image1, alt: 'image1', class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
+          <%= image_tag @workout.image[index], alt: 'image1', class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
         </div>
       <% else %>
         <div class="carousel-item active">
@@ -11,14 +12,12 @@
         </div>
       <% end %>
       <!-- Ajoutez ici les autres images du carrousel si nécessaire -->
-      <% if @workout.image2.attached? %>
         <div class="carousel-item">
-          <%= image_tag @workout.image2, alt: 'image2', class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
+          <%#= image_tag @workout.image2, alt: 'image2', class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
         </div>
-      <% end %>
-      <% if @workout.image3.attached? %>
+        
         <div class="carousel-item">
-          <%= image_tag @workout.image3, alt: 'image3', class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
+          <%#= image_tag @workout.image3, alt: 'image3', class: "d-block mx-auto img-fluid", style:"max-height: 500px; max-width: 100%;" %>
         </div>
       <% end %>
     </div>
