--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
 
   <body data-turbo="false">
+    <a id="top-anchor"></a>
     <%= render "layouts/navbar" %>
     <%= render 'layouts/flash'%>
     <%= yield %>
