rename titre + meta description 1

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Keella</title>
+    <title><%= yield :title %> | Keella </title>
+    <meta name="description" content="<%= content_for?(:meta_description) ? yield(:meta_description) : 'Description par défaut de la page' %>">
+
     <link rel="icon" type="image/x-icon" href="<%= image_path('favicon_keella.png') %>">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
