--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Annonces" %>
+<% content_for :meta_description, "Retrouvez toutes vos annonces" %>
+</head>
 <section class="bg-primary py-5 text-center">
     <h1 class="text-light">Mes Annonces</h1>
 </section>
