--- a/app/views/workouts/edit.html.erb
+++ b/app/views/workouts/edit.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Modifier la séance" %>
+<% content_for :meta_description, "Apportez des modifications ày votre séance" %>
+</head>
 <section class="bg-primary py-5 text-center">
     <h1 class="text-light">Modifie ta séance</h1>
 </section>
