--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Trouver une séance" %>
+<% content_for :meta_description, "Parcourrez des différentes annonces postées par la communauté" %>
+</head>
 <%= render 'searchbar' %>
   
     <div class="album py-5 text-center container">
