--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Proposer une séance" %>
+<% content_for :meta_description, "Proposez une séance" %>
+</head>
 
 <section class="bg-primary py-5 text-center">
     <h1 class="text-light">Propose ta séance</h1>
