--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Séance" %>
+<% content_for :meta_description, "Si la séance vous plait n'hésitez pas à faire une demande de réservation" %>
+</head>
 <section class="text-center py-5 bg-secondary">
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
