--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Mot de passe oublié" %>
+<% content_for :meta_description, "Réinitialisez votre mot de passe" %>
+</head>
 <main class=" d-flex align-items-center pt-5 my-5 ">
   <div class="form-signin w-40 m-auto">
     <div class="modal-body p-5 rounded-4 shadow bg-body-tertiary">
