--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Modifier le compte" %>
+<% content_for :meta_description, "Ajoutez ou modifiez les informations de votre profil" %>
+</head>
 <main class="d-flex align-items-center pt-5 my-5 ">
   <div class="form-signin w-40 m-auto">
     <div class="modal-body p-5 rounded-4 shadow bg-body-tertiary">
