--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,4 +1,7 @@
-
+<head>
+<% content_for :title, "Réservations" %>
+<% content_for :meta_description, "Passez en revue vos dernières réservations" %>
+</head>
 <section class="bg-primary py-5 text-center">
     <h1 class="text-light">Réservations</h1>
 </section>
