--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Accueil" %>
+<% content_for :meta_description, "Louez des équipements pour vos séances de sport à un particulier" %>
+</head>
 <div class="jumbotron text-center" style="background-image: url('<%= asset_path('jumbotron.jpg') %>'); background-size: cover; background-position: center; height: 70vh; color: white;">
   <h1>(Re)Découvrez vos talents sportifs</h1>
   <h5 class="mb-4">Ici, vous pourrez louer ou mettre à disposition des équipements et des locaux sportifs partout en France</h5>
