--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Compte" %>
+<% content_for :meta_description, "Quelle page souhaitez-vous parcourir?" %>
+</head>
 <section class="bg-primary py-5 text-center">
     <h1 class="text-light">Mon Compte</h1>
 </section>
