--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Profil" %>
+<% content_for :meta_description, "Retrouvez les informations partagées par l'utilisateur" %>
+</head>
 <div class="p-3 me-5 ms-5 border-0 bd-example row row-cols-1 row-cols-md-2 g-4">
     <div class="col"> 
         <div class="card ms-auto text-center me-auto" style="max-width: 22rem;">
