rename titre + meta description 2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= yield :title %> | Keella </title>
-    <meta name="description" content="<%= content_for?(:meta_description) ? yield(:meta_description) : 'Description par défaut de la page' %>">
+    <meta name="description" content="<%= content_for?(:meta_description) ? yield(:meta_description) : 'Louez des équipements pour vos séances de sport à un particulier' %>">
 
     <link rel="icon" type="image/x-icon" href="<%= image_path('favicon_keella.png') %>">
     <meta name="viewport" content="width=device-width,initial-scale=1">
