--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -15,8 +15,8 @@
                     <%= image_tag 'logokeella.png', alt: "workout-image", class: "img-fluid" %>
                 <%end%>
             </div>
-                <div class="col-md-8">
-                <div class="card-body">
+            <div class="col-lg-8 col-md-12">
+                    <div class="card-body">
                         <p>N° de réservation : <%= reservation.id %></p>
                     <% if reservation.workout%>
                         <h5 class="card-title"><%= reservation.workout.title %></h5>
@@ -39,55 +39,14 @@
                                 <%= button_to 'Relancer la demande', reservation_path(reservation, user_decision: "relaunched"), method: :patch, class: 'btn btn-secondary disabled' %>                            
                             <% elsif reservation.status == 'closed' %>
                                 
-                        
-                            
-                        <% if reservation.host_rating.nil? %>
-                            <%= form_with(model: reservation, url: reservation_path(reservation), method: :patch) do |form| %>
-                              <div class="dropdown">
-                                <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Choisis ta note
-                                </a>
-                                <ul class="dropdown-menu">
-                                  <% (1..5).each do |rating| %>
-                                    <li>
-                                      <%= form.radio_button :host_rating, rating %>
-                                      <%= form.label "host_rating_#{rating}" do %>
-                                      <%= raw("<i class='bi bi-star-fill'></i>" * rating) %>
-                                        <% end %>
-                                      
-                                    </li>
-                                  <% end %>
-                                  <%= form.submit 'Envoyer' %>
-                                </ul>
-                              </div>
-                            <% end %>
-                          <% else %>
-                            <p>Vous avez déjà soumis une note pour cette réservation.</p>
-                        <% end %>
-                          
-                        <% if reservation.host_comment.nil? %>
-                            <%= form_with(model: reservation, url: reservation_path(reservation), method: :patch) do |form| %>
-                              <div class="dropdown">
-                                <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Laisse un commentaire
-                                </a>
-                                <ul class="dropdown-menu">
-                                  <%= form.label :host_comment, 'Commentaire pour l\'hôte' %>
-                                  <%= form.text_area :host_comment %>
-                                  <%= form.submit 'Envoyer' %>
-                                </ul>
-                              </div>
-                            <% end %>
-                          <% else %>
-                            <p>Vous avez déjà soumis un commentaire pour cette réservation.</p>
-                        <% end %>
-                          
-                                    
-                                    
-                                    
-                                    
-                                
-                                
+                            <div class="row">
+                                <div class="col-lg-6 col-sm-12"> 
+                                    <%= render 'rating', reservation: reservation %>
+                                </div>    
+                                <div class="col-lg-6 col-sm-12"> 
+                                <%= render 'comments', reservation: reservation %>
+                                </div>
+                            </div>    
                             <% end %>
                         </div>
                     </div>
@@ -95,7 +54,7 @@
             </div>
         </div>
     </div>
-  <% end %>
+<% end %>
 </section>
   
   
