--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -4,12 +4,12 @@
         
             <%= turbo_frame_tag "workouts-boxes" do %>
   <%= render "workouts", workouts: @workouts %>
-<% end %>
         <% if @all_showed %>
         <%= link_to "Remonter", "#top-anchor", class: 'btn btn-primary' %>
         <% else %>
-        <%= link_to "Voir plus", workouts_path(showed_workout_number: @next_workouts), id: 'load-more', data:{turbo_frame: "workouts-boxes"}, class: 'btn btn-primary' %>
+        <%= link_to "Voir plus", workouts_path(showed_workout_number: @next_workouts), id: 'load-more', data:{turbo: true, turbo_frame: "workouts-boxes"}, class: 'btn btn-primary' %>
         <% end %>
+<% end %>
     </div>
 
   
