--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -22,8 +22,8 @@
       <a href="<%= workout_path(workout) %>" class="text-decoration-none">
       <div class="card shadow" style="max-width: 50rem; height: 450px;">
               <div style="height: 200px; overflow: hidden;">
-                  <%if workout.image1.attached?%>
-                    <%= image_tag workout.image1, alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
+                  <%if workout.images.attached?%>
+                    <%= image_tag workout.images[0], alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
                   <%else%>
                     <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
                   <% end %>
