--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -14,8 +14,10 @@
                         </div>
                             <div class="card-title-container m-1 border rounded p-2">
                                 <h5 class="card-title"><%= workout.title %></h5>
-                                    <i class="bi bi-star-fill">Note de l'hote</i>
-                        </div>
+                                <%= @average_user_ratings[index] ? @average_user_ratings[index].round(2) : 'Pas encore de note' %>
+                                <i class="bi bi-star-fill"></i>
+                            </div>
+                        
                         <div class="row">
                             <div class="col">
                                 <ul class="list-group list-group-flush">
