--- a/app/views/reservations/_rating.html.erb
+++ b/app/views/reservations/_rating.html.erb
@@ -1,5 +1,5 @@
 
-<% if reservation.host_rating.nil? %>
+<% if reservation.user_rating.nil? %>
     <%= form_with(model: reservation, url: reservation_path(reservation), method: :patch) do |form| %>
         <div class="dropdown">
             <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -8,8 +8,8 @@
                 <ul class="dropdown-menu">
                     <% (1..5).each do |rating| %>
                         <li>
-                            <%= form.radio_button :host_rating, rating %>
-                            <%= form.label "host_rating_#{rating}" do %>
+                            <%= form.radio_button :user_rating, rating %>
+                            <%= form.label "user_rating_#{rating}" do %>
                             <%= raw("<i class='bi bi-star-fill'></i>" * rating) %>
                             <% end %>
                                       
