--- a/app/views/reservations/_comments.html.erb
+++ b/app/views/reservations/_comments.html.erb
@@ -7,7 +7,7 @@
             <ul class="dropdown-menu">
                     <%= form.label :user_comment, 'Commentaire pour l\'hôte' %>
                     <%= form.text_area :user_comment, rows: 5, cols: 40 %>
-                    <%= form.submit 'Envoyer', class: 'btn btn-light  btn-sm' %>
+                    <%= form.submit 'Envoyer', class: 'btn btn-primary  btn-sm' %>
             </ul>
         </div>
     <% end %>
