--- a/app/views/reservations/_rating.html.erb
+++ b/app/views/reservations/_rating.html.erb
@@ -15,7 +15,7 @@
                                       
                         </li>
                     <% end %>
-                            <%= form.submit 'Envoyer', class: 'btn btn-light  btn-sm' %>
+                            <%= form.submit 'Envoyer', class: 'btn btn-primary  btn-sm' %>
                 </ul>
         </div>
     <% end %>
