--- a/app/views/user_mailer/accepted_email.html.erb
+++ b/app/views/user_mailer/accepted_email.html.erb
@@ -11,6 +11,7 @@
     <ol>
       <li>Vous préparer à pour la séance</li>
       <li>Vous rendre à la séance</li>
+      <li>Voici le numéro de l'hote : <%= @host.phone %></li>
       <li>A la fin de votre séance, veuillez confirmer que vous avez assisté à votre séance afin de remercier l’hote en débloquant votre paiement.</li>
     </ol>
     <p>Confirmer la fin de ma séance : </p>
