--- a/app/views/user_mailer/welcome_email.txt.erb
+++ b/app/views/user_mailer/welcome_email.txt.erb
@@ -5,4 +5,5 @@ Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant : <%= @user.email %
 
 Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
 
-À très vite sur monsite.fr !
+Sportivement,
+À très vite sur keella.fly.dev !
