--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,12 +11,28 @@
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="field">
-          <%= f.label :email,class:"floatingInput" %><br />
+          <%= f.label :pseudo,class:"floatingInput" %>*<br />
+          <%= f.text_field :pseudo, autofocus: true, autocomplete: "pseudo",class:"form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :tel,class:"floatingInput" %>*<br />
+          <%= f.text_field :phone, autofocus: true, autocomplete: "phone",class:"form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :ville,class:"floatingInput" %><br />
+          <%= f.collection_select :city_id, City.all, :id, :name, { prompt: "Sélectionner une ville" }, class: "form-control" %>
+
+        </div>
+
+        <div class="field">
+          <%= f.label :email,class:"floatingInput" %>*<br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control" %>
         </div>
 
         <div class="field">
-          <%= f.label :current_password,class:"floatingInput mt-2" %> <i>(Nous en avons besoin pour confirmer les modifications)</i><br />
+          <%= f.label :current_password,class:"floatingInput mt-2" %>* <i>(Nous en avons besoin pour confirmer les modifications)</i><br />
           <%= f.password_field :current_password, autocomplete: "current-password",class:"form-control" %>
         </div>
 
@@ -25,7 +41,7 @@
         <% end %>
 
         <div class="field">
-          <%= f.label :password,class:"floatingInput mt-2" %> <i>(laissez vide si vous ne voulez pas le changer)</i><br />
+          <%= f.label :password,class:"floatingInput mt-2" %>* <i>(laissez vide si vous ne voulez pas le changer)</i><br />
           <%= f.password_field :password, autocomplete: "new-password",class:"form-control" %>
           <% if @minimum_password_length %>
             <em><%= @minimum_password_length %> caractères minimum</em>
@@ -33,7 +49,7 @@
         </div>
 
         <div class="field">
-          <%= f.label :password_confirmation,class:"floatingInput mt-2" %><br />
+          <%= f.label :password_confirmation,class:"floatingInput mt-2" %>*<br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"form-control" %>
         </div>
 
