--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,12 +10,28 @@
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="field">
-          <%= f.label :email,class:"floatingInput" %><br />
+          <%= f.label :pseudo,class:"floatingInput" %>*<br />
+          <%= f.text_field :pseudo, autofocus: true, autocomplete: "pseudo",class:"form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :tel,class:"floatingInput" %>*<br />
+          <%= f.text_field :phone, autofocus: true, autocomplete: "phone",class:"form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :ville,class:"floatingInput" %><br />
+          <%= f.collection_select :city_id, City.all, :id, :name, { prompt: "Sélectionner une ville" }, class: "form-control" %>
+
+        </div>
+
+        <div class="field">
+          <%= f.label :email,class:"floatingInput" %>*<br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control" %>
         </div>
 
         <div class="field">
-          <%= f.label :password,class:"floatingInput" %>
+          <%= f.label :password,class:"floatingInput" %>*
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> caractères minimums)</em>
           <% end %><br />
@@ -23,7 +39,7 @@
         </div>
 
         <div class="field">
-          <%= f.label :password_confirmation,class:"floatingInput" %><br />
+          <%= f.label :password_confirmation,class:"floatingInput" %>*<br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"form-control" %>
         </div>
         <br>
