--- a/app/views/user_mailer/accepted_email.text.erb
+++ b/app/views/user_mailer/accepted_email.text.erb
@@ -5,6 +5,7 @@ Etape suivante ?
 
   1. Vous préparer à pour la séance
   2. Vous rendre à la séance
+    Voici le numéro de l'hote : <%= @host.phone %>
   3. A la fin de votre séance, veuillez confirmer que vous avez assisté à votre séance afin de remercier l’hote en débloquant votre paiement.
 
 Confirmer la fin de ma séance : 
