--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -11,6 +11,8 @@
     <p>
       Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
     </p>
-    <p> À très vite sur monsite.fr !
+    <p>Sportivement,</p>
+    <p>À très vite sur keella.fly.dev !</p>
+
   </body>
 </html>
