--- a/app/views/static_pages/aide.html.erb
+++ b/app/views/static_pages/aide.html.erb
@@ -54,7 +54,7 @@
   <div class="col">
     <div class="card ms-auto h-100" style="max-width: 30rem;">
         <div class="card-body">
-            <h5 class="card-title text-center mb-4">je suis propriétaire</h5>
+            <h5 class="card-title text-center mb-4">Je suis propriétaire</h5>
             <div class="card-text">
                 <p>1.Est-ce qu’un locataire peut me régler en liquide ?</p>
                 <p>Non, n’acceptez jamais une location en dehors du site. Aucun règlement en liquide n’est autorisé pour payer une location. Pourquoi ? Parce qu’en cas d’accident ou de vol, vous ne serait pas assurée par Keella. Le paiement en ligne est un gage de sécurité pour vous, ne prenez pas de risques inutiles en contournant le paiement sur le site.</p>
@@ -69,7 +69,7 @@
   <div class="col">
     <div class="card me-auto h-100" style="max-width: 30rem;">
         <div class="card-body">
-            <h5 class="card-title text-center mb-4">je suis locataire</h5>
+            <h5 class="card-title text-center mb-4">Je suis locataire</h5>
             <div class="card-text">
                 <p>1. Quels sont les moyens de paiement acceptés ?</p>
                 <p>Actuellement, Keella n’accepte que les paiements par carte bancaire. Tout paiement en espèces ou en dehors du site est considéré comme une infraction aux conditions générales d’utilisation et constitue un motif de bannissement de la communauté. Utiliser notre plateforme permet d’une part la protection de vos données, et d’autre part une assurance en cas de problème.</p>
