working with new issues 🥲

--- a/app/views/reservations/_edit-people.html.erb
+++ b/app/views/reservations/_edit-people.html.erb
@@ -1,2 +1,2 @@
-<%= button_to "Accepter", workout_reservation_path(reservation, host_decision: "accepted"), method: :patch, class:"btn btn-primary" %>
-<%= button_to 'Refuser', workout_reservation_path(reservation, host_decision: "refused"), method: :patch, class:"btn btn-danger" %>
+<%= button_to "Accepter", workout_reservation_path(reservation, host_decision: "accepted"), method: :patch, class: "dropdown-item" %>
+<%= button_to 'Refuser', workout_reservation_path(reservation, host_decision: "refused"), method: :patch, class: "dropdown-item" %>
