--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -72,12 +72,16 @@
                     <div class="btn-group">
                         <%= link_to "Consulter la page Profil", user_path(reservation.user), class: 'btn btn-success btn-sm'%>
                         <% if reservation.status == "pending" %>
-                            <button class="btn btn-warning btn-sm" id="toggle-dropdown">Accepter/refuser la reservation</button>
-                                <div class="dropdown" id="dropdown">
-                                    <%= turbo_frame_tag "edit-people" do %>
-                                        <%= render "edit-people", reservation: reservation, user: reservation.user %>
-                                    <% end %>
+                            <div class="dropdown">
+                                <a class="btn btn-warning btn-sm dropdown-toggle" type="button" id="toggle-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Accepter/refuser la reservation
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="toggle-dropdown">
+                                <p><%= reservation.id%></p>
+                                <%= button_to "Accepter", user_reservation_path(id: reservation.id, host_decision: "accepted"), method: :patch, class: "dropdown-item" %>
+                                <%= button_to 'Refuser', user_reservation_path(id: reservation.id, host_decision: "refused"), method: :patch, class: "dropdown-item" %>    
                                 </div>
+                            </div>
                         <% else %>
                             <%= link_to "Accepter/refuser la reservation 🔒", edit_user_reservation_path(workout,reservation), class: 'btn btn-warning btn-sm disabled'%>
                         <% end %> 
