--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -90,14 +90,18 @@
               <li>Date de fin : <strong><%= @workout.end_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
             </ul>
             <div>
-              <% if @workout.is_free %>
-                <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>              
-              <% else %>
-                <% if @workout.places_available > 0 %>
-                  <%= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
+              <% if user_signed_in?  %>
+                <% if @workout.is_free %>
+                  <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>              
                 <% else %>
-                  <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary disabled" %>
+                  <% if @workout.places_available > 0 %>
+                    <%= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
+                  <% else %>
+                    <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary disabled" %>
+                  <% end %>
                 <% end %>
+              <% else %>
+              <%= link_to 'Connectez-vous pour réserver', new_user_session_path, class: "w-100 btn btn-lg btn-primary" %>
               <% end %>
             </div>
           <% end %>
