--- a/app/views/host_mailer/reservation_cancelled.txt.erb
+++ b/app/views/host_mailer/reservation_cancelled.txt.erb
@@ -1,5 +1,5 @@
-Bonjour <%= @host.email %>,
-<%= @user.email %> a annulé sa réservation.
+Bonjour <%= @host.pseudo %>,
+<%= @user.pseudo %> a annulé sa réservation.
 Nous sommes désolés de vous informer que la réservation pour la séance de <%= @workout.title %> a été annulée.
 Si vous avez des questions, n'hésitez pas à nous contacter.
 
