--- a/app/views/host_mailer/reservation_request.html.erb
+++ b/app/views/host_mailer/reservation_request.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @host.email %> tu as reçu une demande de réservation !</h1>
+    <h1>Salut <%= @host.pseudo %> tu as reçu une demande de réservation !</h1>
     <p>
-      <%= @user.email %> souhaite réserver une séance chez toi !
+      <%= @user.pseudo %> souhaite réserver une séance chez toi !
     </p>
     <p>
       Veuillez vérifier les places disponible avant d'accepter une personne
