--- a/app/views/host_mailer/reservation_request.txt.erb
+++ b/app/views/host_mailer/reservation_request.txt.erb
@@ -1,6 +1,6 @@
-Salut <%= @host.email %> tu as reçu une demande de réservation !
+Salut <%= @host.pseudo %> tu as reçu une demande de réservation !
 
-<%= @user.email %> souhaite réserver une séance chez toi !
+<%= @user.pseudo %> souhaite réserver une séance chez toi !
 
 Veuillez vérifier les places disponible avant d'accepter une personne
 
