--- a/app/views/host_mailer/workout_cancelled.txt.erb
+++ b/app/views/host_mailer/workout_cancelled.txt.erb
@@ -1,4 +1,4 @@
-Bonjour <%= @user.email %>,
+Bonjour <%= @user.pseudo %>,
 Nous vous confirmons l'annulation de votre séance.
 
 Si vous avez des questions, n'hésitez pas à nous contacter.
