--- a/app/views/user_mailer/evaluate_host.txt.erb
+++ b/app/views/user_mailer/evaluate_host.txt.erb
@@ -1,4 +1,4 @@
-Salut <%= @user.email %> merci d'avoir confirmé la fin de la séance !
+Salut <%= @user.pseudo %> merci d'avoir confirmé la fin de la séance !
     
 Sportivement,
 À très vite sur keella.fly.dev !
