--- a/app/views/user_mailer/refused_email.txt.erb
+++ b/app/views/user_mailer/refused_email.txt.erb
@@ -1,4 +1,4 @@
-Salut <%= @user.email %>,
+Salut <%= @user.pseudo %>,
 Mauvaise nouvelle, ta demande a été refusée.
 Vous serez remboursé dans les 48h.
 Veuillez nous contacter en cas de probleme : 
