--- a/app/views/user_mailer/workout_cancelled.txt.erb
+++ b/app/views/user_mailer/workout_cancelled.txt.erb
@@ -1,5 +1,5 @@
-Bonjour <%= @user.email %>,
-<%= @host.email %> a annulé la séance.
+Bonjour <%= @user.pseudo %>,
+<%= @host.pseudo %> a annulé la séance.
 Nous sommes désolés de vous informer que la réservation pour la séance de <%= @workout.title %> a été annulée par l'hote.
 
 Si vous avez des questions, n'hésitez pas à nous contacter.
