--- a/app/views/user_mailer/accepted_email.html.erb
+++ b/app/views/user_mailer/accepted_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @user.email %>,</h1>
+    <h1>Salut <%= @user.pseudo %>,</h1>
     <h2>Bonne nouvelle, ta demande a été accepté !</h2>
     <p>Votre place est confirmée, vous n'avez rien à faire.</p>
     <p>Etape suivante ?</p>
