--- a/app/views/user_mailer/accepted_email.text.erb
+++ b/app/views/user_mailer/accepted_email.text.erb
@@ -1,4 +1,4 @@
-Salut <%= @user.email %>,
+Salut <%= @user.pseudo %>,
 Bonne nouvelle, ta demande a été accepté !
 Votre place est confirmée, vous n'avez rien à faire.
 Etape suivante ?
