--- a/app/views/user_mailer/evaluate_host.html.erb
+++ b/app/views/user_mailer/evaluate_host.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @user.email %> merci d'avoir confirmé la fin de la séance !</h1>
+    <h1>Salut <%= @user.pseudo %> merci d'avoir confirmé la fin de la séance !</h1>
     
     <p>Sportivement,</p>
     <p>À très vite sur keella.fly.dev !</p>
