--- a/app/views/user_mailer/refused_email.html.erb
+++ b/app/views/user_mailer/refused_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @user.email %>,</h1>
+    <h1>Salut <%= @user.pseudo %>,</h1>
     <h2>Mauvaise nouvelle, ta demande a été refusée. </h2>
     <p>Vous serez remboursé dans les 48h.</p>
     <p>Veuillez nous contacter en cas de probleme : <a href="#">Nous contacter</a></p>
