--- a/app/views/user_mailer/reservation_cancelled.html.erb
+++ b/app/views/user_mailer/reservation_cancelled.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Bonjour <%= @user.email %>,</h1>
+    <h1>Bonjour <%= @user.pseudo %>,</h1>
     <h2>Nous vous confirmons l'annulation de votre réservation.</h2>
     
     <p>Si vous avez des questions, n'hésitez pas à nous contacter.</p>
