--- a/app/views/user_mailer/welcome_email.txt.erb
+++ b/app/views/user_mailer/welcome_email.txt.erb
@@ -1,7 +1,7 @@
-Salut <%= @user.name %> et bienvenue chez nous !
+Salut <%= @user.pseudo %> et bienvenue chez nous !
 ==========================================================
 
-Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant : <%= @user.email %>.
+Tu t'es inscrit sur keella.fly.dev en utilisant l'e-mail suivant : <%= @user.email %>.
 
 Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
 
