--- a/app/views/user_mailer/workout_cancelled.html.erb
+++ b/app/views/user_mailer/workout_cancelled.html.erb
@@ -4,8 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Bonjour <%= @user.email %>,</h1>
-    <h2><%= @host.email %> a annulé la séance.</h2>
+    <h1>Bonjour <%= @user.pseudo %>,</h1>
+    <h2><%= @host.pseudo %> a annulé la séance.</h2>
     <p>Nous sommes désolés de vous informer que la réservation pour la séance de <%= @workout.title %> a été annulée par l'hote.</p>
     <p>Si vous avez des questions, n'hésitez pas à nous contacter.</p>
     <p>Sportivement,</p>
