--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -53,10 +53,10 @@
                 <div>
                 <%if @workout.host.avatar.attached?%>
                   <%= image_tag @workout.host.avatar, alt: '32x32', class:"mr-2 rounded mb-1 bg-dark", style:"width: 32px; height: 32px;" %>
-                  <strong class="text-gray-dark"><%= @workout.host.email %></strong>
+                  <strong class="text-gray-dark"><%= @workout.host.pseudo %></strong>
                 <%else%>
                   <img alt="32x32" class="mr-2 rounded mb-1 bg-dark" style="width: 32px; height: 32px;" src="<%= image_path('iconeuser.png') %>" data-holder-rendered="true">
-                  <strong class="text-gray-dark"><%= @workout.host.email %></strong>
+                  <strong class="text-gray-dark"><%= @workout.host.pseudo %></strong>
                 <%end%>
                 </div>
               </a>
