methode moyenne dans model user

--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -61,7 +61,7 @@
                 </div>
               </a>
             </div>            
-            <span><i class="bi bi-star-fill">Note de l'hote</i></span>
+            <span><i class="bi bi-star-fill">Note de l'hote<%= @workout.host.average_user_rating %></i></span>
           </div>
         </div>
         <hr>
