--- a/app/views/workouts/_workouts.html.erb
+++ b/app/views/workouts/_workouts.html.erb
@@ -9,10 +9,15 @@
                       <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 100%; object-fit: cover;"  %>
                   <% end %>
               </div>
-                  <div class="card-title-container m-1 border rounded p-2">
+              
+                    <div class="card-title-container m-1 border rounded p-2">
                       <h5 class="card-title"><%= workout.title %></h5>
-                          <i class="bi bi-star-fill">Note de l'hote</i>
-              </div>
+                      
+                          <i class="bi bi-star-fill">Note de l'hote: <%= workout.host.average_user_rating %></i>
+                    </div>
+                
+              
+
               <div class="row">
                   <div class="col">
                       <ul class="list-group list-group-flush">
