--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -95,9 +95,18 @@
                   <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>              
                 <% else %>
                   <% if @workout.places_available > 0 %>
-                    <%= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
+                    <%= form_with(model: @reservation, local: true) do |form| %>                    
+                    
+                    <%= form.hidden_field :workout_id, value: @workout.id %>
+                    <%= form.label :quantity, "Nombre de place",class:"floatingInput" %>
+                    <%= form.select :quantity, options_for_select((1..@workout.places_available).to_a), class: "form-control" %>
+                    
+                    <%= form.submit "Envoyer une demande de réservation #{@workout.price}€", data:{turbo_frame: "places-available"}, class:"w-100 py-1 mb-2 btn btn-primary rounded-3" %>
+                    
+                    <% end %>
+                    <%#= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
                   <% else %>
-                    <%= button_to "Il n'y a plus de place", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary disabled" %>
+                    <%= button_to "Il n'y a plus de place", '#', class:"w-100 btn btn-lg btn-primary disabled" %>
                   <% end %>
                 <% end %>
               <% else %>
