moyenne des 2 colones user/host rating fix bug params update

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -58,7 +58,7 @@
             <%workout.reservations.each do |reservation|%>
                  <td class="bg-tertiary"></td>
                     <td><%=reservation.user.email%></td>
-                    <td>⭐️<%= workout.host.average_host_rating %></td>
+                    <td>⭐️<%= workout.host.average_rating %></td>
                         <%if reservation.user.city != nil %>
                             <td><%=reservation.user.city.name%></td>
                         <%else%>
