--- a/app/views/workouts/_workouts.html.erb
+++ b/app/views/workouts/_workouts.html.erb
@@ -13,7 +13,7 @@
                     <div class="card-title-container m-1 border rounded p-2">
                       <h5 class="card-title"><%= workout.title %></h5>
                       
-                          <i class="bi bi-star-fill">Note de l'hote: <%= workout.host.average_user_rating %></i>
+                          <i class="bi bi-star-fill">Note de l'hote: <%= workout.host.average_rating %></i>
                     </div>
                 
               
