--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
         <% end %>
     <div/>
     
-    <ul class="nav justify-content-center pb-3 mb-3">
+    <ul class="nav justify-content-center mb-3">
         <li class="nav-item">
             <a href="<%= aide_path %>" class="nav-link px-2 text-body-primary">Aide</a>
         </li>    
@@ -27,7 +27,7 @@
         </li>
     
     </ul>
-
+    <button class="btn btn-outline-info btn-sm mb-4 altFont" id="toggleFontButton">Changer la police en Opendys</button>
     <ul class="list-unstyled d-flex justify-content-center">
         <li class="ms-3 d-line">
             <a class="text-body-secondary" href="https://github.com/tommy-pellerin/keella.git">
