--- a/app/assets/stylesheets/font.css
+++ b/app/assets/stylesheets/font.css
@@ -4,7 +4,7 @@
     
 }
 body {
-  font-family: 'Arial', sans-serif; /* Police principale */
+  font-family: 'Helvetica Neue', sans-serif; /* Police principale */
 
 }
 .altFont {
