--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -46,10 +46,10 @@
                                 
                             <div class="row">
                                 <div class="col-lg-6 col-sm-12"> 
-                                    <%= render 'rating', reservation: reservation %>
+                                    <%= render 'userating', reservation: reservation %>
                                 </div>    
                                 <div class="col-lg-6 col-sm-12"> 
-                                <%= render 'comments', reservation: reservation %>
+                                <%= render 'usercomments', reservation: reservation %>
                                 </div>
                             </div>    
                             <% end %>
