spread quantity to every page

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -29,6 +29,7 @@
                     <% else %>
                         <p>L'annonce a été supprimé par son créateur.</p>
                     <% end%>
+                        <p class="card-text">Nombre de place : <%= reservation.quantity %></p>
                         <p class="card-text">Status : <%= reservation.status %></p>
                         <p class="card-text"><small class="text-body-secondary">Date de la réservation <%= reservation.created_at.strftime("%d/%m/%Y %H:%M") %></small></p>
                     
