--- a/app/views/user_mailer/accepted_email.html.erb
+++ b/app/views/user_mailer/accepted_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Salut <%= @user.pseudo %>,</h1>
     <h2>Bonne nouvelle, ta demande a été accepté !</h2>
-    <p>Votre place est confirmée, vous n'avez rien à faire.</p>
+    <p>Nombre de place confirmé : <%= @reservation.quantity %>, vous n'avez rien à faire.</p>
     <p>Etape suivante ?</p>
     <ol>
       <li>Vous préparer à pour la séance</li>
