--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,5 +1,6 @@
 <div>
   <p>Veuillez vérifier les places disponible avant d'accepter une personne</p>
+  <p>Nombre de place demandé : <%= @reservation.quantity %></p>
   <div>
     <%= button_to "Accepter", workout_reservation_path(@reservation, host_decision: "accepted"), method: :patch, class:"btn btn-primary" %>
     <%= button_to 'Refuser', workout_reservation_path(@reservation, host_decision: "refused"), method: :patch, class:"btn btn-danger" %>
