--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -78,13 +78,14 @@
       <div class="col col-md-4 mt-2">
         <div class="card shadow">
           <div class="card-body">
-          <%= turbo_frame_tag "places-available" do %>
+          
             <div class="d-flex">
               <h5 class="card-title me-1"><%= @workout.price %>€</h5>
               <span class="card-title">par séance</span>
             </div>
             <h6>Nombre de participant maximum : <%= @workout.participant_number %></h6>
-            <%= render "places_available", workout: @workout %>
+            <p>Nombre de place restante : <%= @workout.places_available %></p>
+            <p>Nombre de place en attente de réponse : <%= @workout.places_in_pending %></p>
             <ul>
               <li>Date de début : <strong><%= @workout.start_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
               <li>Date de fin : <strong><%= @workout.end_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
@@ -92,7 +93,7 @@
             <div>
               <% if user_signed_in?  %>
                 <% if @workout.is_free %>
-                  <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>              
+                  <%= button_to 'Envoyer une demande de réservation gratuite', workout_reservations_path(@workout), method: :post, class:"w-100 btn btn-lg btn-primary" %>              
                 <% else %>
                   <% if @workout.places_available > 0 %>
                     <%= form_with(model: @reservation, local: true) do |form| %>                    
@@ -101,7 +102,7 @@
                     <%= form.label :quantity, "Nombre de place",class:"floatingInput" %>
                     <%= form.select :quantity, options_for_select((1..@workout.places_available).to_a), class: "form-control" %>
                     
-                    <%= form.submit "Envoyer une demande de réservation #{@workout.price}€", data:{turbo_frame: "places-available"}, class:"w-100 py-1 mb-2 btn btn-primary rounded-3" %>
+                    <%= form.submit "Envoyer une demande de réservation #{@workout.price}€", class:"w-100 py-1 mb-2 btn btn-primary rounded-3" %>
                     
                     <% end %>
                     <%#= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
@@ -113,7 +114,7 @@
               <%= link_to 'Connectez-vous pour réserver', new_user_session_path, class: "w-100 btn btn-lg btn-primary" %>
               <% end %>
             </div>
-          <% end %>
+          
           </div>
         </div>
       </div>
