--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -102,7 +102,7 @@
                     <%= form.label :quantity, "Nombre de place",class:"floatingInput" %>
                     <%= form.select :quantity, options_for_select((1..@workout.places_available).to_a), class: "form-control" %>
                     
-                    <%= form.submit "Envoyer une demande de réservation #{@workout.price}€", class:"w-100 py-1 mb-2 btn btn-primary rounded-3" %>
+                    <%= form.submit "Envoyer une demande de réservation", class:"w-100 py-1 mb-2 btn btn-primary rounded-3" %>
                     
                     <% end %>
                     <%#= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
